RESOLVED FIXED141917
REGRESSION (r180088): Reproducible crash in ViewGestureController::removeSwipeSnapshot()
https://bugs.webkit.org/show_bug.cgi?id=141917
Summary REGRESSION (r180088): Reproducible crash in ViewGestureController::removeSwip...
Tim Horton
Reported 2015-02-23 12:02:07 PST
Reproducible crash in ViewGestureController::removeSwipeSnapshot()
Attachments
Patch (1.58 KB, patch)
2015-02-23 12:02 PST, Tim Horton
no flags
Tim Horton
Comment 1 2015-02-23 12:02:40 PST
Brian Weinstein
Comment 2 2015-02-23 12:21:05 PST
Oops, I can’t review this.
Tim Horton
Comment 3 2015-02-23 12:22:15 PST
You can, you can!
WebKit Commit Bot
Comment 4 2015-02-23 13:05:46 PST
Comment on attachment 247132 [details] Patch Clearing flags on attachment: 247132 Committed r180512: <http://trac.webkit.org/changeset/180512>
WebKit Commit Bot
Comment 5 2015-02-23 13:05:54 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.