Reproducible crash in ViewGestureController::removeSwipeSnapshot() https://bugs.webkit.org/show_bug.cgi?id=141917 <rdar://problem/19918590>

Reviewed by Brian Weinstein.

* UIProcess/mac/ViewGestureControllerMac.mm:
(WebKit::ViewGestureController::removeSwipeSnapshot):
If the snapshot was purged and we're showing a white snapshot, we won't
be able to mark the (null) snapshot surface as volatile. Add a null check.


Canonical link: https://commits.webkit.org/159935@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@180512 268f45cc-cd09-0410-ab3c-d52691b4dbfc